Correcting color contrast in button text

--- a/scss/components/_toggles.scss
+++ b/scss/components/_toggles.scss
@@ -48,6 +48,7 @@
     & + .button--neutral {
       background-color: $gray-dark;
       border: 2px solid $primary;
+      color: $inverse;
     }
 
     & + .button--empty {
